# houdini-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 2026-06-21_code_refactor_candidates.md  2026-06-21_code_refactor_checklist.md  2026-06-21_refactor_phase_0_baseline.md  2026-06-21_refactor_phase_3_results.md  2026-06-21_refactor_phase_4_results.md  2026-06-21_refactor_phase_5_results.md  2026-06-22_refactor_phase_6_results.md  2026-06-22_refactor_phase_7_results.md  2026-06-22_refactor_phase_8_watchlist_reassessment.md  handoff-2026-03-28.md  houdini-cli-agent-stack.md  houdini-cli-attrib-spec.md  houdini-cli-help-draft.md  houdini-cli-help-strategy.md  houdini-cli-implementation-checklist.md  houdini-cli-live-observations.md  houdini-cli-minimal-spec.md  houdini-cli-node-nav-spec.md  houdini-cli-nodetype-spec.md  houdini-cli-python-runtime.md  houdini-cli-traversal-spec.md  houdini-data-method-recommendations.md  houdini-data-model.md  houdini-local-help-spec.md  houdini-skill-local-help-bootstrap-spec.md  houdini_cli_opencl_sync_fix_plan.md  large-scene-traversal-improvements-spec.md  network-snapshot-export-exploration.md  performance-audit.md  performance-benchmark-suite.md
houdini_cli/: __init__.py  main.py
scripts/: audit_perf_hotspots.py  perf_benchmark_suite.py  perf_probe_hda_parms.py  perf_probe_node_get.py  perf_probe_opencl_cop.py
shelf_script/: start_hrpyc_server_shelf.py
tests/: test_attrib.py  test_cop.py  test_envelopes.py  test_eval.py  test_hda_inspect.py  test_hda_lifecycle.py  test_hda_parms.py  test_hda_validate.py  test_help.py  (+21 more)
(+97 files in other folders)
