[project]
name = "houdini-cli"
version = "0.1.1"
description = "Agent-oriented CLI for controlling a live Houdini session over hrpyc/rpyc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rpyc>=5.3,<6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "build>=1.2,<2.0",
]

[project.scripts]
houdini-cli = "houdini_cli.main:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["houdini_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
